# MD-ML

./: .gitignore
experiments/matmul/: CMakeLists.txt  matmul_config.h  matmul_fake_offline.cpp  matmul_party_0.cpp  matmul_party_1.cpp
md-ml-py/: TODO.md  docker-compose.yml  matmul_bench.py  matmul_fake_offline.py  matmul_party_0.py  matmul_party_1.py  pyproject.toml  test_e2e.py  test_local.py
md-ml-py/dashboard/: Dockerfile  package-lock.json  package.json
md-ml-py/dashboard/app/: globals.css  layout.tsx  page.tsx
md-ml-py/dashboard/app/components/: ActorPanel.tsx  ConfigPanel.tsx  KaTeX.tsx  LogModal.tsx  LogViewer.tsx  MathText.tsx  types.ts  (+8 more)
md-ml-py/dashboard/lib/: db.ts
md-ml-py/docker/: Dockerfile  online_phase.py  run_data_party.py  run_party.py
md-ml-py/md_ml/: __init__.py  dashboard.py  fake_offline.py  linear_algebra.py  mpspdz_reader.py  networking.py  protocols.py  share.py
md-ml-py/md_ml/protocols/: __init__.py  dot_product.py  dot_product_trunc.py  edabits.py  mac_check.py  mult_trunc.py
md-ml-py/mp-spdz/: Dockerfile  README.md  bench.py  entrypoint.sh
md-ml-py/mp-spdz/programs/: bench_matmul_triples.mpc  bench_simple.mpc
md-ml-rs/: Cargo.toml
md-ml-rs/src/: lib.rs
md-ml-rs/src/fake_offline/: fake_add_constant_gate.rs  fake_add_gate.rs  fake_circuit.rs  fake_elem_multiply_gate.rs  fake_gate.rs  fake_gtz_gate.rs  fake_input_gate.rs  fake_multiply_gate.rs  fake_multiply_trunc_gate.rs  fake_output_gate.rs  fake_party.rs  fake_subtract_gate.rs  mod.rs
md-ml-rs/src/networking/: mod.rs  party.rs
md-ml-rs/src/protocols/: add_constant_gate.rs  add_gate.rs  circuit.rs  elem_multiply_gate.rs  gate.rs  gtz_gate.rs  input_gate.rs  mod.rs  multiply_gate.rs  multiply_trunc_gate.rs  output_gate.rs  party_with_fake_offline.rs  subtract_gate.rs
md-ml-rs/src/share/: mod.rs  spdz2k_share.rs
md-ml-rs/src/utils/: fixed_point.rs  linear_algebra.rs  mod.rs  timer.rs
(+15 files in other folders)
